# memoire

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONSIDERED_FEATURES.md  Makefile  README.md  icon-preview.html  pyproject.toml  pytest.ini  renovate.json  requirements-test.txt  ruff.toml  todo.md
.github/: dependabot.yml
docs/: configuration.md  cost.md  development.md  features-admin.md  features-ai-pal.md  features-themes.md  features.md  fitbit-setup.md  getting-started.md  infrastructure.md
frontend/: docs.html  index.html  openapi.yaml.tpl
lambda/auth/: handler.py
mcp/: Dockerfile  README.md  pyproject.toml
mcp/memoire_mcp/: server.py
scripts/: migrate_habit_logs.py
terraform/: api_gateway.tf  budget.tf  cognito.tf  dns.tf  dns_aws.tf  dns_cloudflare.tf  dynamodb.tf  iam.tf  lambda_assistant.tf  lambda_auth.tf  lambda_authorizer.tf  lambda_bookmarks.tf  lambda_budget.tf  lambda_diagrams.tf  lambda_export.tf  lambda_favorites.tf  lambda_feeds.tf  lambda_finances.tf  lambda_fitbit.tf  lambda_fitbit_sync.tf  lambda_goals.tf  lambda_habits.tf  lambda_health.tf  lambda_home.tf  lambda_journal.tf  lambda_layer.tf  lambda_links.tf  lambda_notes.tf  lambda_nutrition.tf  lambda_settings.tf  lambda_tasks.tf  lambda_tokens.tf  lambda_watcher.tf  main.tf  monitoring.tf  outputs.tf  s3_frontend.tf  terraform.tfvars.example  variables.tf
tests/: content.py  test_api.py  test_auth_handler.py  test_authorizer.py  test_habits_crud.py  test_image_crud.py  test_tasks_api.py
tui/: .goreleaser.yaml  ARCHITECTURE.md  FEATURES.md  README.md  UX.md  go.mod  go.sum
(+201 files in other folders)
