[project]
name = "memoire-mcp"
version = "0.1.0"
description = "MCP server for the Memoire personal productivity API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
memoire-mcp = "memoire_mcp.server:main"
